# custom-IME

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  binary_ime.conf  config_loader.py  converter.py  go.mod  install.sh  main.go  prerequisites.sh  test.conf  test.ttx  test.txt
commands/: color.go  config.go  create.go  db.go  delete.go  edit.go  install.go  list.go
completions/bash/: custom-ime
completions/fish/: custom-ime.fish
completions/zsh/: _custom-ime
config/: binaryime.conf  braile.conf
docs/: custom-ime.1
mappings/: default.conf  keywords.conf
src/: CMakeLists.txt  binaryime-addon.conf.in  binaryime.conf  binaryime.cpp  binaryime.h
src/custom-ime-1.0.0/: .gitignore  main.go
src/custom-ime-1.0.0/commands/: config.go  create.go  edit.go
src/custom-ime-1.0.0/templates/: cmake_main.txt  cmake_src.txt  ime.cpp
templates/: addon.conf  ime.conf  ime.cpp  ime.h
utils/: fileutils.go
